minor bugfix on mobile nav

--- a/barnav-alex.css
+++ b/barnav-alex.css
@@ -113,7 +113,9 @@
 
   .menu__link{
       padding: 25px 0;
-      height: auto;
+      height: 100%;
+      width: 100%;
+      justify-content: center;
       color: white;
   }
 
